; ModuleID = '/home/carl/AnghaBench/FFmpeg/libswscale/extr_swscale.c_reset_ptr.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libswscale/extr_swscale.c_reset_ptr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32**, i32)* @reset_ptr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @reset_ptr(i32** %0, i32 %1) #0 {
  %3 = alloca i32**, align 8
  %4 = alloca i32, align 4
  store i32** %0, i32*** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = call i32 @isALPHA(i32 %5)
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %11, label %8

8:                                                ; preds = %2
  %9 = load i32**, i32*** %3, align 8
  %10 = getelementptr inbounds i32*, i32** %9, i64 3
  store i32* null, i32** %10, align 8
  br label %11

11:                                               ; preds = %8, %2
  %12 = load i32, i32* %4, align 4
  %13 = call i32 @isPlanar(i32 %12)
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %27, label %15

15:                                               ; preds = %11
  %16 = load i32**, i32*** %3, align 8
  %17 = getelementptr inbounds i32*, i32** %16, i64 2
  store i32* null, i32** %17, align 8
  %18 = load i32**, i32*** %3, align 8
  %19 = getelementptr inbounds i32*, i32** %18, i64 3
  store i32* null, i32** %19, align 8
  %20 = load i32, i32* %4, align 4
  %21 = call i32 @usePal(i32 %20)
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %26, label %23

23:                                               ; preds = %15
  %24 = load i32**, i32*** %3, align 8
  %25 = getelementptr inbounds i32*, i32** %24, i64 1
  store i32* null, i32** %25, align 8
  br label %26

26:                                               ; preds = %23, %15
  br label %27

27:                                               ; preds = %26, %11
  ret void
}

declare dso_local i32 @isALPHA(i32) #1

declare dso_local i32 @isPlanar(i32) #1

declare dso_local i32 @usePal(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
